# bank-account-example

./: Cargo.toml  README.md
src/: errors.rs  main.rs
src/controllers/: bank.rs  mod.rs
src/dto/: bank_account.rs  mod.rs  withdrawal_event.rs  withdrawal_request.rs  withdrawal_response.rs
src/repositories/: bank_account.rs  mod.rs  withdrawals.rs
