[package]
name = "bank-account-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.25.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }
anyhow = "1.0.83"
log = "0.4.21"
